--- a/application/build.gradle
+++ b/application/build.gradle
@@ -1,3 +1,12 @@
+apply plugin: 'org.springframework.boot'
+
+bootJar.enabled = false
+jar.enabled = true
+
 dependencies {
     implementation project(':model')
+
+    implementation 'org.springframework.boot:spring-boot-starter'
+
+    testImplementation project(':model').sourceSets.test.output
 }
