--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ allprojects {
 }
 
 ext {
-    set('springCloudVersion', "Hoxton.RC2")
+    set('springCloudVersion', "Hoxton.RELEASE")
 }
 
 subprojects {
@@ -38,6 +38,7 @@ subprojects {
         testImplementation 'org.codehaus.groovy:groovy-all:2.5.6'
         testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
         testImplementation 'org.spockframework:spock-spring:1.3-groovy-2.5'
+        testImplementation 'org.hamcrest:hamcrest'
 
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
