--- a/infrastructure/src/integrationTest/resources/application.yml
+++ b/infrastructure/src/integrationTest/resources/application.yml
@@ -1,8 +1,6 @@
-server:
-  servlet:
-    context-path: /consumer
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/consumer
-    username: admin
-    password: admin
+    url: jdbc:h2:mem:db;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL
+    username: sa
+    password: sa
+    driver-class-name: org.h2.Driver
